# Snake

./: CMakeLists.txt  README.md  main.cc  ncurses_main.cc  sdl_main.cc
common/: common_utils.h  logging.h
controller/: CMakeLists.txt  game_controller.hpp
model/: CMakeLists.txt  food.cc  food.h  game.cc  game.h  snake.cc  snake.h  table.cc  table.h
model/test/: CMakeLists.txt  test_food.cc  test_game.cc  test_snake.cc  test_table.cc
persistence/: CMakeLists.txt
persistence/common/: CMakeLists.txt  score.cc  score.h  score_record.cc  score_record.h
persistence/file_db/: CMakeLists.txt  file_persistence.cc  file_persistence.h
persistence/interface/: persistence_interface.h
ui/: CMakeLists.txt  main_window.cc  main_window.h  menu_window.cc  menu_window.h  notification_window.h  notifyer.cc  notifyer.h  size_getter_window.cc  size_getter_window.h  ui_interface.cc  ui_interface.h  ui_ncurses.cc  ui_ncurses.h  utils.cc  utils.h  view_interface.h  view_ncurses.cc  view_ncurses.h
ui/common/: CMakeLists.txt  button.cc  button.h  input_field.cc  input_field.h  ui_element.cc  ui_element.h  window.cc  window.h
view/: CMakeLists.txt
view/interface/: view_interface.h
view/ncurses/: CMakeLists.txt
view/ncurses/common/: CMakeLists.txt  button.h  input_field.h  ui_element.cc  ui_element.h  utils.cc  utils.h  window.h
view/ncurses/game/: CMakeLists.txt  ncurses_game_view.cc  ncurses_game_view.h
view/ncurses/menu/: CMakeLists.txt  menu_window.cc  menu_window.h  notifyer.cc  notifyer.h
view/sdl/game/: CMakeLists.txt  sdl_game_view.cc  sdl_game_view.h
